// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Based - Full Integration Tests Enums Test Service should generate files 1`] = `
Array [
  "account-insert-request.form-group-fac.ts",
  "account-insert-request.model.ts",
  "account-update-request.form-group-fac.ts",
  "account-update-request.model.ts",
  "account.form-group-fac.ts",
  "account.model.ts",
  "contact-insert-request.form-group-fac.ts",
  "contact-insert-request.model.ts",
  "contact-types.enum.ts",
  "contact-update-request.form-group-fac.ts",
  "contact-update-request.model.ts",
  "contact.form-group-fac.ts",
  "contact.model.ts",
  "contact.properties.ts",
  "endpoints.ts",
  "index.ts",
]
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: account.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function AccountFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    refId: new FormControl<string | null>(''),
    name: new FormControl<string | null>(''),
    parentAccountId: new FormControl<string | null>(''),
    isEnabled: new FormControl<boolean | null>(''),
    emailInvoice: new FormControl<boolean | null>(''),
    tenantId: new FormControl<string | null>(''),
    contactCount: new FormControl<number | null>('', {validators: Validators.compose([Validators.min(1), Validators.max(99999)]) }),
    parentAccount: new FormControl<Account | null>(''),
    contacts: new FormArray([]),
    inverseParentAccount: new FormArray([]),
  });
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: account.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

/**
 * Customer Account
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccount {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  isEnabled?: boolean;
  emailInvoice?: boolean;
  tenantId?: string;
  contactCount?: number;
  parentAccount?: IAccount;
  contacts?: IContact[];
  inverseParentAccount?: IAccount[];
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: account-insert-request.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function AccountInsertRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    refId: new FormControl<string | null>(''),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    parentAccountId: new FormControl<string | null>(''),
    emailInvoice: new FormControl<boolean | null>(''),
    contacts: new FormArray([]),
  });
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: account-insert-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccountInsertRequest {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  emailInvoice?: boolean;
  contacts?: IContact[];
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: account-update-request.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function AccountUpdateRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    refId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    parentAccountId: new FormControl<string | null>(''),
    isEnabled: new FormControl<boolean | null>(''),
    emailInvoice: new FormControl<boolean | null>(''),
    contacts: new FormArray([]),
  });
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: account-update-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccountUpdateRequest {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  isEnabled?: boolean;
  emailInvoice?: boolean;
  contacts?: IContact[];
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function ContactFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    isEnabled: new FormControl<boolean | null>(''),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(''),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(''),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(''),
    phone1: new FormControl<string | null>('', {validators: Validators.compose([Validators.minLength(13), Validators.maxLength(14), Validators.pattern('^(d{3}) ?d{3}-d{4}$')]) }),
    phone2: new FormControl<string | null>('', {validators: Validators.compose([Validators.minLength(13), Validators.maxLength(14), Validators.pattern('^(d{3}) ?d{3}-d{4}$')]) }),
    account: new FormControl<Account | null>(''),
  });
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ContactTypes } from './contact-types.enum';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContact {
/**
 * Unique Identifier
 */
  id?: string;
  contactType?: ContactTypes;
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactProperties {
/**
 * Unique Identifier
 */
  ID = 'id',
  IS_ENABLED = 'isEnabled',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
  ACCOUNT = 'account',
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact-insert-request.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function ContactInsertRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(''),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(''),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(''),
    phone1: new FormControl<string | null>(''),
    phone2: new FormControl<string | null>(''),
  });
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact-insert-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactInsertRequest {
  id?: string;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact-types.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

export enum ContactTypes {
  Other = 0,
  Air = 2,
  Truck = 3,
  Train = 4,
  CargoTransport = 5,
}

export const contactTypeValues = [
  { key: 0, name: 'Other', displayText: 'Other'},
  { key: 2, name: 'Air', displayText: 'Air'},
  { key: 3, name: 'Truck', displayText: 'Truck'},
  { key: 4, name: 'Train', displayText: 'Train'},
  { key: 5, name: 'CargoTransport', displayText: 'Cargo Transport'},
];
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact-update-request.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function ContactUpdateRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(''),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(''),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(''),
    phone1: new FormControl<string | null>(''),
    phone2: new FormControl<string | null>(''),
  });
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: contact-update-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactUpdateRequest {
  id?: string;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  contacts = '/api/v1/Contacts.{format}',
}
export interface IEndpoints {
  readonly contacts: string;
}
"
`;

exports[`File Based - Full Integration Tests Enums Test Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './account-insert-request.form-group-fac';
export * from './account-insert-request.model';
export * from './account-update-request.form-group-fac';
export * from './account-update-request.model';
export * from './account.form-group-fac';
export * from './account.model';
export * from './contact-insert-request.form-group-fac';
export * from './contact-insert-request.model';
export * from './contact-types.enum';
export * from './contact-update-request.form-group-fac';
export * from './contact-update-request.model';
export * from './contact.form-group-fac';
export * from './contact.model';
export * from './contact.properties';
"
`;
